LIST OF CHANGES

 - the samplesheet driver's parser extended to cope with data from
   multiple runs.

release 88.2.1
 - patch to accommodate different URL info passed to the CGI
   module by different Apache httpd versions

release 88.2
 - scripts to list run folders that are candidates for deletion in
   the Data Recovery area
 - status monitor: improved logging, which now shows timestamps
 - alleviate differences in cloud hosts time zone configuration by
   storing UTC offset as a part of the timestamp in serialized
   run and lane status objects

release 88.1.1
 - test data fixes following ml warehouse schema changes, see
   https://github.com/wtsi-npg/ml_warehouse/pull/104 for details

release 88.1
 - status monitor running with inotify disabled should be able to
   recognise when a cached file is changed
 - 2 sec sleep introduced in the beginning of the job that saves
   statuses to a file to ensure no two statuses of the same run/lane
   have the same timestamp so that the iscurrent db flag could be
   assigned inambigiously when the statuses are saved to a database

release 88.0
 - tracking database:
     add column `incompatible_tag` to the tag table;
     populate `incompatible_tag` column with values previously
       hardcoded in a DBIx class;
     add tags for instrument workflow;
     simplify code in DBIx classes for setting and unsetting tags;
     drop requirement for a valid user id when unsetting a tag;
     drop a check for tag existence when unsetting a tag
 - staging monitor to set/fix tracking db record about instrument side and
   workflow type by setting/resetting appropriate run tags
 - Change staging area monitor so for NovaSeq runs, both CopyComplete + RTAComplete
   or RTAComplete + max waiting time must be true before a run can be considered
   copy complete.

release 87.4
 - changes to support geno_refset repository
 - moved method for creating full file names from npg_tracking::product
   to the moniker role