@@ -1,10 +1,10 @@
-[Data],,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-Lane,Sample_ID,Sample_Name,GenomeFolder,Index,Index2,bait_name,default_library_type,default_tag_sequence,default_tagtwo_sequence,email_addresses,email_addresses_of_followers,email_addresses_of_managers,email_addresses_of_owners,gbs_plex_name,id_run,is_control,is_pool,lane_id,lane_priority,library_name,organism,organism_taxon_id,project_cost_code,project_id,project_name,purpose,qc_state,request_id,required_insert_size_range,sample_accession_number,sample_cohort,sample_common_name,sample_consent_withdrawn,sample_description,sample_donor_id,sample_id,sample_name,sample_public_name,sample_reference_genome,sample_supplier_name,spiked_phix_tag_index,study_accession_number,study_alignments_in_bam,study_contains_nonconsented_human,study_contains_nonconsented_xahuman,study_description,study_id,study_name,study_reference_genome,study_separate_y_chromosome_data,study_title,tag_index,
-1,22802061,7592352,,AGTTCAGG,CCAACAGA,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,26480,0,0,22863688,0,22802061,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7592352,3811339,7592352,,,3547031,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,9,
-2,22802061,7592352,,AGTTCAGG,CCAACAGA,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,26480,0,0,22863689,0,22802061,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7592352,3811339,7592352,,,3547031,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,9,
-3,22802061,7592352,,AGTTCAGG,CCAACAGA,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,26480,0,0,22863690,0,22802061,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7592352,3811339,7592352,,,3547031,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,9,
-4,22802061,7592352,,AGTTCAGG,CCAACAGA,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,26480,0,0,22863691,0,22802061,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7592352,3811339,7592352,,,3547031,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,9,
-1,23356155,7617423,,GGCTTAAG,TCGTGACC,,HiSeqX PCR free,GGCTTAAG,TCGTGACC,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,28780,0,0,25222813,0,23356155,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7617423,3836420,7617423,,,3426258,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,4,
-2,22802061,7592352,,AGTTCAGG,CCAACAGA,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,28780,0,0,25222814,0,22802061,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7592352,3811339,7592352,,,3547031,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,4,
-3,23455444,7616265,,AGTTCAGG,CCAACAGA,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,28780,0,0,25222815,0,23455444,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7616265,3835262,7616265,,,2612688,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,4,
-4,23454971,7615018,,GACCTGAA,TTGGTGAG,,HiSeqX PCR free,GACCTGAA,TTGGTGAG,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,28780,0,0,25222816,0,23454971,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7615018,3834015,7615018,,,2361066,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,4,
+[Data],,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+Lane,Sample_ID,Sample_Name,GenomeFolder,bait_name,default_library_type,default_tag_sequence,default_tagtwo_sequence,email_addresses,email_addresses_of_followers,email_addresses_of_managers,email_addresses_of_owners,gbs_plex_name,id_run,is_control,is_pool,lane_id,lane_priority,library_name,organism,organism_taxon_id,project_cost_code,project_id,project_name,purpose,qc_state,request_id,required_insert_size_range,sample_accession_number,sample_cohort,sample_common_name,sample_consent_withdrawn,sample_description,sample_donor_id,sample_id,sample_name,sample_public_name,sample_reference_genome,sample_supplier_name,spiked_phix_tag_index,study_accession_number,study_alignments_in_bam,study_contains_nonconsented_human,study_contains_nonconsented_xahuman,study_description,study_id,study_name,study_reference_genome,study_separate_y_chromosome_data,study_title,tag_index,
+1,22802061,7592352,,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,26480,0,0,22863688,0,22802061,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7592352,3811339,7592352,,,3547031,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,9,
+2,22802061,7592352,,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,26480,0,0,22863689,0,22802061,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7592352,3811339,7592352,,,3547031,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,9,
+3,22802061,7592352,,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,26480,0,0,22863690,0,22802061,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7592352,3811339,7592352,,,3547031,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,9,
+4,22802061,7592352,,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,26480,0,0,22863691,0,22802061,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7592352,3811339,7592352,,,3547031,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,9,
+1,23356155,7617423,,,HiSeqX PCR free,GGCTTAAG,TCGTGACC,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,28780,0,0,25222813,0,23356155,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7617423,3836420,7617423,,,3426258,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,4,
+2,22802061,7592352,,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,28780,0,0,25222814,0,22802061,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7592352,3811339,7592352,,,3547031,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,4,
+3,23455444,7616265,,,HiSeqX PCR free,AGTTCAGG,CCAACAGA,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,28780,0,0,25222815,0,23455444,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7616265,3835262,7616265,,,2612688,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,4,
+4,23454971,7615018,,,HiSeqX PCR free,GACCTGAA,TTGGTGAG,aaaa@sanger.ac.uk,,aaaa@sanger.ac.uk,aaaa@sanger.ac.uk,,28780,0,0,25222816,0,23454971,,9606,T4600,,,standard,1,,from:450 to:450,,,Homo sapiens,0,,7615018,3834015,7615018,,,2361066,888,,1,0,0,UK Whole Genome sequencing study,5392,UK Study,Homo_sapiens (GRCh38_15_plus_hs38d1) %5Bminimap2%5D,0,UK Study,4,
